# g2o-rust-bindings

./: .gitignore  README.md  build.rs
g2o/: CMakeLists.txt  Makefile
g2orust/: Cargo.toml  build.rs
g2orust/examples/: pose_optimization.rs
g2orust/g2o/: cmake_install.cmake
g2orust/g2o/g2o/rust/: rust_helper.cpp  rust_helper.h
g2orust/g2o/g2o/types/: types_six_dof_expmap.cpp
src/: lib.rs
